updated according current sit requirment

--- a/deployment/kubernetes/helm/benchmark/kafka-exactly-once.yaml
+++ b/deployment/kubernetes/helm/benchmark/kafka-exactly-once.yaml
@@ -17,7 +17,7 @@ name: Kafka-exactly-once
 driverClass: io.openmessaging.benchmark.driver.kafka.KafkaBenchmarkDriver
 
 # Kafka client-specific configuration
-replicationFactor: 3
+replicationFactor: '3'
 
 topicConfig: |
   min.insync.replicas=2
